add delete submissions method to endpoints
